[gd_scene load_steps=11 format=2]

[ext_resource path="res://addons/EditorGUI/ArrowDown_hover.png" type="Texture" id=1]
[ext_resource path="res://addons/EditorGUI/Remove_hover.png" type="Texture" id=2]
[ext_resource path="res://addons/EditorGUI/ArrowUp.png" type="Texture" id=3]
[ext_resource path="res://addons/EditorGUI/ArrowDown.png" type="Texture" id=4]
[ext_resource path="res://addons/EditorGUI/ArrowUp_hover.png" type="Texture" id=5]
[ext_resource path="res://addons/EditorGUI/Remove.png" type="Texture" id=6]
[ext_resource path="res://addons/VNScriptEditor/noteBookBlock.gd" type="Script" id=7]
[ext_resource path="res://addons/VNScriptEditor/blockStyle.tres" type="StyleBox" id=8]
[ext_resource path="res://addons/VNScriptEditor/editorFontTheme.tres" type="Theme" id=9]
[ext_resource path="res://addons/VNScriptEditor/VN_Edit.gd" type="Script" id=10]

[node name="choiceBlock" type="Panel"]
margin_right = 1340.0
margin_bottom = 340.0
rect_min_size = Vector2( 1340, 340 )
mouse_filter = 1
size_flags_horizontal = 4
theme = ExtResource( 9 )
custom_styles/panel = ExtResource( 8 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1340.0
margin_bottom = 340.0
rect_min_size = Vector2( 1340, 340 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="header" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 1340.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 60 )
custom_constants/separation = 10

[node name="whiteSpace" type="Control" parent="HBoxContainer/header"]
margin_right = 45.0
margin_bottom = 60.0
rect_min_size = Vector2( 45, 60 )

[node name="whatBlock" type="Label" parent="HBoxContainer/header"]
margin_left = 55.0
margin_top = 12.0
margin_right = 155.0
margin_bottom = 48.0
size_flags_horizontal = 5
size_flags_vertical = 6
text = "Choice:"

[node name="blockName" type="LineEdit" parent="HBoxContainer/header"]
margin_left = 165.0
margin_top = 7.0
margin_right = 305.0
margin_bottom = 53.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
max_length = 30

[node name="noticeBar" type="Label" parent="HBoxContainer/header"]
margin_left = 315.0
margin_right = 1170.0
margin_bottom = 60.0
rect_min_size = Vector2( 855, 60 )
theme = ExtResource( 9 )

[node name="list" type="HBoxContainer" parent="HBoxContainer/header"]
margin_left = 1180.0
margin_right = 1312.0
margin_bottom = 60.0
custom_constants/separation = 18

[node name="up" type="TextureButton" parent="HBoxContainer/header/list"]
margin_top = 14.0
margin_right = 32.0
margin_bottom = 46.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 5 )
expand = true

[node name="down" type="TextureButton" parent="HBoxContainer/header/list"]
margin_left = 50.0
margin_top = 14.0
margin_right = 82.0
margin_bottom = 46.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 1 )
expand = true

[node name="delete" type="TextureButton" parent="HBoxContainer/header/list"]
margin_left = 100.0
margin_top = 14.0
margin_right = 132.0
margin_bottom = 46.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_hover = ExtResource( 2 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
margin_top = 64.0
margin_right = 1340.0
margin_bottom = 334.0
rect_min_size = Vector2( 1340, 270 )
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/MarginContainer"]
margin_left = 10.0
margin_right = 1330.0
margin_bottom = 260.0
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = true
wrap_enabled = true
script = ExtResource( 10 )

[connection signal="pressed" from="HBoxContainer/header/list/up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="HBoxContainer/header/list/down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="HBoxContainer/header/list/delete" to="." method="_on_delete_pressed"]
